cluster/apps/homepage-dashboard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-dashboard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homepage-dashboard
  template:
    metadata:
      labels:
        app: homepage-dashboard
        # netpol.cilium.io/egress-to-kube-dns: "true"
        # netpol.cilium.io/egress-to-world: "true"
        # netpol.cilium.io/ingress-from-ingress: "true"
        # netpol.cilium.io/ingress-from-prometheus: "true"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: homepage-dashboard
          image: ghcr.io/benphelps/homepage:latest
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: logs
              mountPath: /app/logs
            - name: cache
              mountPath: /app/public/icons
      volumes:
        - name: config-source
          configMap:
            name: homepage-config
        - name: config
          emptyDir: {}
        - name: logs
          emptyDir: {}
        - name: cache
          emptyDir: {}
